[package]
name = "examples"
edition = "2024"
version = "0.1.0"
authors = ["@iwarp", "Enlighten Systems"]
license = "MIT"
license-file = "../LICENSE"
homepage = "https://github.com/iwarp/rustlock"

[[bin]]
name = "simple"
path = "src/simple.rs"

[dependencies]
rustlock-core = { path = "../rustlock-core" }
