[package]
name = "rustlock-admin"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
log = "0.4"
env_logger = "0.11.8"
zip = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
uuid = { version = "1", features = ["v4"] }
walkdir ="2.5.0"
chrono = "0.4.41"
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
hex="0.4.3"
colored = "3.0.0"
version-compare = "0.2.0"

rustlock-core = {path="../rustlock-core"}