[package]
name = "rustlock-admin"
edition = "2024"
version = "0.1.0"
authors = ["@iwarp", "Enlighten Systems"]
license = "MIT"
license-file = "../LICENSE"
homepage = "https://github.com/iwarp/rustlock"
description = "Interactive CLI to manage applications and customers, issuing hardware‑locked licenses via SQLite."
keywords = ["license", "hardware", "fingerprint", "encryption", "offline", "feature flags", "cli"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
log = "0.4"
env_logger = "0.11.8"
zip = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
uuid = { version = "1", features = ["v4"] }
walkdir ="2.5.0"
chrono = "0.4.41"
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
hex="0.4.3"
colored = "3.0.0"
version-compare = "0.2.0"

rustlock-core = {path="../rustlock-core"}