[package]
name = "rustlock-core"
edition = "2024"
version = "0.1.0"
authors = ["@iwarp", "Enlighten Systems"]
license = "MIT"
license-file = "../LICENSE"
homepage = "https://github.com/iwarp/rustlock"
description = "Library for generating secure hardware fingerprints and validating encrypted licenses offline."
keywords = ["license", "hardware", "fingerprint", "encryption", "offline", "feature flags"]


[dependencies]
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
hex = "0.4.3"
version-compare = "0.2.0"
sysinfo="0.35.1"

machineid-rs = "1.2.4"
thiserror="2.0.12"

serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmp-serde = "1.3.0"

log = "0.4.27"
clap = { version = "4.5.4", features = ["derive"] }


