[package]
name = "generator"
edition.workspace = true
version.workspace = true


[dependencies]
rustlock-core = {path="../rustlock-core"}

ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
chrono = "0.4"
colored = "*"
version-compare = "0.2.0"
env_logger = "0.11.8"
hex = "0.4.3"
walkdir ="2.5.0"
